<resources>
    <string name="app_name">What\'s The Weather?</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favourite">Favourite</string>
    <string name="weatherLogo" translatable="false" />
    <string name="gettingLoc">No location found</string>
    <string name="gettingDate">Please check your network</string>
    <string name="default_current_temp">0º</string>
    <string name="default_weather_type">None</string>
    <string name="backgroundforest">backgroundForest</string>
    <string name="settingsbtn">SettingsBtn</string>
    <string name="lowTemp">22º</string>
    <string name="maxTemp">26º</string>
    <string name="weatherDescription">Clear</string>
    <string name="date">Tomorrow</string>
    <string name="line" translatable="false">Line</string>
    <string name="icon" translatable="false">Illustration of current weather</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="aboutText">This is a weather application using Darksky.net API. It will locate you current location and show weather data for upcoming week. Press the button to go to Darksky\'s website.</string>
    <string name="weekDay">Weekday</string>
    <string name="add_to_favourites">Add to favourites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="website">Website</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="about">About</string>
    <string name="check_the_box">To use fahrenheit degrees, please check the checkbox.</string>
    <string name="add_a_location">Add a location</string>
    <string name="addBtn">Add</string>
    <string name="latitude" >Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="weather_content">weatherContentThroughoutWeek</string>
    <string name="city">City</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

</resources>
