<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="#ECECEC">


    <TextView
        android:id="@+id/cityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/city"
        android:textSize="30sp"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintRight_toRightOf="parent"
        card_view:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/latitudeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/latitude"
        android:textSize="16sp"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/cityView" />

    <TextView
        android:id="@+id/longitudeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/longitude"
        android:textSize="16sp"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/latitudeView"
        android:layout_marginLeft="16dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/latitudeResultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="205dp"
        card_view:layout_constraintBaseline_toBaselineOf="@+id/latitudeView"
        card_view:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/longitudeResultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="205dp"
        card_view:layout_constraintBaseline_toBaselineOf="@+id/longitudeView"
        card_view:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
