<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.ahlberg.jacob.whatstheweather.WeatherActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="390dp"
        android:layout_height="61dp"
        android:background="@color/actionbarColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"


        />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/colorNavigationBar"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <TextView
        android:id="@+id/weatherDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gettingDate"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/currentTemp"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:gravity="bottom|start"
        android:maxWidth="150dp"
        android:text="@string/default_current_temp"
        android:textColor="@color/textColor"
        android:textSize="80sp"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/weatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/weatherDate" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="120dp"
        android:layout_height="128dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/weatherLogo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherDate"
        app:srcCompat="@drawable/whats_the_weather_logo"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/cityCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/gettingLoc"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/weatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/weatherDescription"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:text="@string/default_weather_type"
        android:textColor="@color/textColor"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/currentTemp"
        app:layout_constraintRight_toLeftOf="@+id/weatherIcon"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.07" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="295dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/content_weather_reports"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageButton
        android:id="@+id/settingsBtn"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:elevation="16dp"
        android:scaleType="centerInside"
        app:layout_constraintRight_toRightOf="@+id/my_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />


</android.support.constraint.ConstraintLayout>
